# pySat

./: .gitignore  .satrc  BUILD_pypredict  DIFF  IMO_Working_Meteor_Shower_List.xml  Logging.py  Orbicraft-Zorkiy.trsp  README.md  gui.old  gui.py  latlon2maiden.py  mapping.py  meteor_showers.py  moon.py  nasa.txt  params.py  playpen.py  pySat.py  pyproject.toml  requirements.txt  rig_control.py  rotor.py  sat9.py  sat_class.old  sat_class.py  satcom  satellites.py  satellites2.py  settings.py  settings_qt.py  watchdog.py  windoz.bat  xit.txt
pypredict/: DIFF  JBA  LOG3  predict.py
pypredict-1.7.0/: JBA  predict.c
pypredict.oldest/: LOG2  predict.c  test.py
work/: analyze.py  rotor.py  sats.m  sats.py
