[project]
name = "pysat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pyephem>=9.99",
    "pyhamtools>=0.11.0",
    "pypredict>=1.7.2",
    "pyqt6>=6.9.0",
    "pyserial>=3.5",
    "pytz>=2025.2",
    "scipy>=1.15.3",
]
