[project]
name = "pysat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "psutil>=7.0.0",
    "pyephem>=9.99",
    "pyhamtools>=0.12.0",
    "pypredict>=1.7.2",
    "pyserial>=3.5",
    "pyside6>=6.9.1",
    "pytz>=2025.2",
    "scipy>=1.15.3",
]
